# openssl

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  NOTES-WINDOWS.md  WORKSPACE  run.py  run.sh  run_build.sh  run_build_window.sh  run_test_windows.sh  run_windows.sh
.github/workflows/: bazel.yml
test/: .gitignore  MODULE.bazel  run_tests.pl
