module(
    name = "openssl",
    version = "3.3.1.bzl.1x",
    compatibility_level = 0,
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_perl", version = "0.2.0")
bazel_dep(name = "nasm", version = "2.14.02")
tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
tools.cmake(version = "3.23.1")
tools.ninja(version = "1.11.1")
use_repo(
    tools,
    "meson_src",
)